Shorten endpoint /trading/offerbook to /offerbook
